fix word break on expense desc

--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -50,6 +50,7 @@
 
 .list-item__title {
     margin: 0;
+    word-break: break-all;
 }
 
 .list-item__subtitle {
